--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "postcss-px-to-viewport",
+  "name": "postcss-px-to-viewport-ng",
   "description": "A CSS post-processor that converts px to viewport units (vw, vh, vmin, vmax).",
-  "version": "1.1.1",
-  "author": "Dmitry Karpunin <koderfunk@gmail.com>",
+  "version": "1.0.0",
+  "author": "zyq <qqdhsy@126.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git@github.com:evrone/postcss-px-to-viewport.git"
+    "url": "git+ssh://git@github.com/ZyqGitHub1/postcss-px-to-viewport"
   },
-  "bugs": "https://github.com/evrone/postcss-px-to-viewport/issues",
-  "homepage": "https://github.com/evrone/postcss-px-to-viewport",
+  "bugs": {
+    "url": "https://github.com/ZyqGitHub1/postcss-px-to-viewport/issues"
+  },
+  "homepage": "https://github.com/ZyqGitHub1/postcss-px-to-viewport",
   "main": "index.js",
   "keywords": [
     "css",
@@ -25,16 +27,20 @@
     "postcss-plugin"
   ],
   "scripts": {
-    "test": "jest spec/*.spec.js"
+    "test": "jest"
   },
   "dependencies": {
-    "object-assign": ">=4.0.1"
+    "object-assign": ">=4.1.1"
   },
   "devDependencies": {
-    "jest": "^25.4.0",
-    "postcss": ">=5.0.2"
+    "clean-publish": "^4.1.1",
+    "jest": "^29.4.3",
+    "postcss": "^8.4.21"
   },
   "peerDependencies": {
-    "postcss": ">=5.0.2"
+    "postcss": "^8.0.0"
+  },
+  "directories": {
+    "example": "example"
   }
 }
